fix : flex-wrap , add: img + testo prima row

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@ body{
     color: white;
     background-color: #141922;
 }
-
+h5{
+    color: #787a7f;
+}
 .container-fluid{
     height: 100%
 }
@@ -32,6 +34,19 @@ body{
     margin: 0 10px;
     text-transform: uppercase;
     line-height: 4;
+}
+.gallery .row.recently{
+    margin: 0 15px;
+}
+
+.gallery .nested-box>img{
+    width: 100%;
+}
+.gallery .nested-box > .text{
+    text-align: center;
+}
+.gallery .nested-box > .text > h2{
+    font-size: 18px;
 }
 
 /* footer */
@@ -74,8 +89,13 @@ body{
 }
 
 .debug .nested-box{
-    height: 150px;
-    width: 100%;
-    background-color: yellow;
-    
+    min-height: 150px;
+    width: 170px;
+    background-color: transparent;
+    padding: 10px;
+
+}
+
+.debug .row.recently > .col-xs-2{
+
 }
